<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Android Trivia</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Restart</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia" translatable="false">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d). Score: %3$d.</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions and got a score of %3$d points!</string>
    <string name="share_failure_text">I failed hard at %1$d out of %1$d questions while playing  #UdacityAndroidTrivia , yet got a score of %3$d points!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="winMsg">You nailed %1$d out of %2$d questions!%nHere\'s your epic score: %3$d.</string>
    <string name="loseMsg">You failed at question %1$d out of %2$d! Sooo SAD&#8230;%nHere\'s your loser score: %3$d.</string>
    <string name="mainmenu">Main menu</string>
    <string name="difficulty">Difficulty</string>
    <string name="select_difficulty">Difficulty selection</string>
    <string name="easyLevel">Easy</string>
    <string name="mediumLevel">Normal</string>
    <string name="hardLevel">Hard</string>
    <string name="noSelectedLevel">No selected</string>
    <string name="confirmChoice">OK</string>
    <string name="cancelChoice">Cancel</string>
    <string name="currentLevel">Level: %1$s</string>
    <string name="hint_button">Hint</string>
    <string name="exit">Exit</string>
    <string name="hello_blank_fragment">You should not be reading this. Get something better to do!</string>
    <string name="play">Play</string>
    <string name="next_match">Next match</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="questionAdder_title">Questions List</string>
    <string name="questions_adder_button">Manage Questions</string>
    <string name="create_question">Create Question</string>
    <string name="introduce_question_text">Introduce a new question</string>
    <string name="introduce_correct_answer">Type the correct answer</string>
    <string name="introduce_filler_answers">Type three wrong answers</string>
    <string name="introduce_hint_text">Introduce a hint</string>
    <string name="question_list_label">Question %1$d</string>

    <!-- questions and answers -->
    <string name="question0">What is Android Jetpack?</string>
    <string name="q0_answ0">All of these</string>
    <string name="q0_answ1">Tools</string>
    <string name="q0_answ2">Documentation</string>
    <string name="q0_answ3">Libraries</string>
    <string name="q0_hint">It\'s so complete!</string>

    <string name="question1">What is the base class for layouts?</string>
    <string name="q1_answ0" translatable="false">ViewGroup</string>
    <string name="q1_answ1" translatable="false">ViewSet</string>
    <string name="q1_answ2" translatable="false">ViewCollection</string>
    <string name="q1_answ3" translatable="false">ViewRoot</string>
    <string name="q1_hint">A layout is a &#8230; of views.</string>

    <string name="question2">What layout do you use for complex screens?</string>
    <string name="q2_answ0" translatable="false">ConstraintLayout</string>
    <string name="q2_answ1" translatable="false">GridLayout</string>
    <string name="q2_answ2" translatable="false">LinearLayout</string>
    <string name="q2_answ3" translatable="false">FrameLayout</string>
    <string name="q2_hint">The Layout Editor was made thinking of it</string>

    <string name="question3">What do you use to push structured data into a layout?</string>
    <string name="q3_answ0" translatable="false">Data binding</string>
    <string name="q3_answ1" translatable="false">Data pushing</string>
    <string name="q3_answ2" translatable="false">Set text</string>
    <string name="q3_answ3">An OnClick method</string>
    <string name="q3_hint">It\'s similar to javaFX.</string>

    <string name="question4">What method do you use to inflate layouts in fragments?</string>
    <string name="q4_answ0" translatable="false">onCreateView()</string>
    <string name="q4_answ1" translatable="false">onActivityCreated()</string>
    <string name="q4_answ2" translatable="false">onCreateLayout()</string>
    <string name="q4_answ3" translatable="false">onInflateLayout()</string>
    <string name="q4_hint">it has something to do with fragments\' parent type</string>

    <string name="question5">What\'s the build system for Android?</string>
    <string name="q5_answ0" translatable="false">Gradle</string>
    <string name="q5_answ1" translatable="false">Graddle</string>
    <string name="q5_answ2" translatable="false">Grodle</string>
    <string name="q5_answ3" translatable="false">Groyle</string>
    <string name="q5_hint">It\'s a really popular build automation tool in Java development.</string>

    <string name="question6">Which class do you use to create a vector drawable?</string>
    <string name="q6_answ0" translatable="false">VectorDrawable</string>
    <string name="q6_answ1" translatable="false">AndroidVectorDrawable</string>
    <string name="q6_answ2" translatable="false">DrawableVector</string>
    <string name="q6_answ3" translatable="false">AndroidVector</string>
    <string name="q6_hint">The name says it all.</string>

    <string name="question7">Which one of these is an Android navigation component?</string>
    <string name="q7_answ0" translatable="false">NavController</string>
    <string name="q7_answ1" translatable="false">NavCentral</string>
    <string name="q7_answ2" translatable="false">NavMaster</string>
    <string name="q7_answ3" translatable="false">NavSwitcher</string>
    <string name="q7_hint">It manages the app navigation within a NavHost.</string>

    <string name="question8">Which XML element lets you register an activity with the launcher activity?</string>
    <string name="q8_answ0" translatable="false">intent-filter</string>
    <string name="q8_answ1" translatable="false">app-registry</string>
    <string name="q8_answ2" translatable="false">launcher-registry</string>
    <string name="q8_answ3" translatable="false">app-launcher</string>
    <string name="q8_hint">Remember what is used to comunicate between Activities.</string>

    <string name="question9">What do you use to mark a layout for data binding?</string>
    <string name="q9_answ0" translatable="false">&lt;layout&gt;</string>
    <string name="q9_answ1" translatable="false">&lt;binding&gt;</string>
    <string name="q9_answ2" translatable="false">&lt;data-binding&gt;</string>
    <string name="q9_answ3" translatable="false">&lt;dbinding&gt;</string>
    <string name="q9_hint">It is a root tag.</string>
    <string name="duplicated_question_error">The question already exists.</string>
    <string name="unfilled_question_error">Please, fill all the requested fields.</string>
    <string name="not_enough_questions">Not enough questions to play, loading defaults.</string>
    <string name="clear">Delete All</string>

</resources>
