<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.android.navigation.title.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_titleFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_titleFragment_to_rulesFragment"
            app:destination="@id/rulesFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.android.navigation.game.GameFragment"
        android:label="@string/title_android_trivia_question"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="currentLevel"
            app:argType="com.example.android.navigation.utils.Level" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.example.android.navigation.gameOver.GameOverFragment"
        android:label="@string/game_over"
        tools:layout="@layout/fragment_game_over" >
        <action
            android:id="@+id/action_gameOverFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="numAciertos"
            app:argType="integer" />
        <argument
            android:name="numPreguntas"
            app:argType="integer" />
        <argument
            android:name="selectedLevel"
            app:argType="com.example.android.navigation.utils.Level" />
        <argument
            android:name="score"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.example.android.navigation.gameWon.GameWonFragment"
        android:label="@string/congratulations"
        tools:layout="@layout/fragment_game_won" >
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="numAciertos"
            app:argType="integer" />
        <argument
            android:name="numPreguntas"
            app:argType="integer" />
        <argument
            android:name="selectedLevel"
            app:argType="com.example.android.navigation.utils.Level" />
        <argument
            android:name="score"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.android.navigation.AboutFragment"
        android:label="@string/title_about_trivia"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.android.navigation.RulesFragment"
        android:label="@string/title_trivia_rules"
        tools:layout="@layout/fragment_rules" >
        <action
            android:id="@+id/action_rulesFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>