<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.GameOverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameOverConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gameOverBackground">

        <ImageView
            android:id="@+id/tryAgainImage"
            android:layout_width="321dp"
            android:layout_height="352dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/game_over"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/gameOverMsg"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2"
            app:srcCompat="@drawable/try_again" />

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/try_again"
            android:textColor="?colorAccent"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/gameOverExitButton"
            app:layout_constraintEnd_toStartOf="@+id/gameOverExitButton"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/gameOverExitButton" />

        <TextView
            android:id="@+id/gameOverMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loseMsg"
            android:textAlignment="center"
            android:textAppearance="@style/exaltedText"
            app:layout_constraintBottom_toTopOf="@+id/gameOverExitButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tryAgainImage"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/gameOverExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/tryAgainButton"
            app:layout_constraintTop_toBottomOf="@+id/gameOverMsg"
            app:layout_constraintVertical_weight="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>